see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

06-Apr-2013 Mark Dexter
 # [#30453] Tags: Pagination not working when linking to a tag.
 # [#30486] *Banners Manager:Banners and Banners Manager:Clients Status filter issue. Thanks Jean-Marie Simonet.
 # [#30480] com_contact error in admin->view->contacts search "author:xxxx". Thanks Brent Cordis.
 # [#30481] Missing space between icon-cog and caret in featured view. Thanks Thomas Hunziker.
 # [#30250] Upgrade jQuery from 1.8.1 to 1.8.3. Thanks George Wilson.
 # [#30046] Update SQLSRV with platform fixes. Thanks David Hurley.

05-Apr-2013 Jean-Marie Simonet
 # [#30416] duplicate alias in banner manager on pressing save as copy

04-Apr-2013 Mark Dexter
 # Reverting [#30430] Severe bug with "com_content" component routing.

04-Apr-2013 Jean-Marie Simonet
 # [#30454] Tags: Adding Tags via Batch function replaces all previous tags. Thanks David and Elin.
 # [#30463] Missing closing div in compact tag layout. Thanks Thomas Hunziker and Constantin Romankiewicz
 # [#30464] ACL Undefined variable error in contentadministrator.php on line 112. Thanks Constantin Romankiewicz 
 # [#30062] Base Item option in mod_menu has no effect [regression]. Thanks René Alain Erichsen
 # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
 # [#30210] Undefined index errors by using the style 'beezTabs' at an beez template. Thanks Constantin Romankiewicz
 # [#30444] Newfeeds Hide icon wrong colour
 # [#30450] Remove moduleclass suffix from <input> and <button> elements in mod_search. Thanks Thomas Hunziker
 # [#29377] Image select. Thanks Constantin Romankiewicz