@@ -86,37 +86,4 @@ class TagsHelper
 
 		return $result;
 	}
-
-	public static function getAssociations($pk)
-	{
-		$associations = array();
-		$db = JFactory::getDbo();
-		$query = $db->getQuery(true)
-			->from('#__tags as c')
-			->join('INNER', '#__associations as a ON a.id = c.id AND a.context=' . $db->quote('com_tags.item'))
-			->join('INNER', '#__associations as a2 ON a.key = a2.key')
-			->join('INNER', '#__tags as c2 ON a2.id = c2.id')
-			->where('c.id =' . (int) $pk);
-		$select = array(
-				'c2.language',
-				$query->concatenate(array('c2.id', 'c2.alias'), ':') . ' AS id',
-		);
-		$query->select($select);
-		$db->setQuery($query);
-		$contactitems = $db->loadObjectList('language');
-
-		// Check for a database error.
-		if ($error = $db->getErrorMsg())
-		{
-			JError::raiseWarning(500, $error);
-			return false;
-		}
-
-		foreach ($contactitems as $tag => $item)
-		{
-			$associations[$tag] = $item;
-		}
-
-		return $associations;
-	}
 }
