@@ -37,7 +37,6 @@ COM_TAGS_CONFIG_TAGGED_ITEMS_FIELD_LAYOUT_LABEL="Default Tagged Items Layout"
 COM_TAGS_CONFIGURATION="Tags Configuration"
 COM_TAGS_DELETE_NOT_ALLOWED="Delete not allowed for tag %s. "
 COM_TAGS_DESCRIPTION_DESC="Enter an optional tag description in the text-area."
-COM_TAGS_ERROR_ALL_LANGUAGE_ASSOCIATED="A tag item set to All languages can't be associated. Associations have not been set."
 COM_TAGS_ERROR_UNIQUE_ALIAS="Another Tag has the same alias"
 COM_TAGS_EXCLUDE="Exclude"
 COM_TAGS_FIELD_CONFIG_HITS_DESC="Displays the number of hits"
@@ -84,9 +83,6 @@ COM_TAGS_HAS_SUBCATEGORY_ITEMS_1="%d item is assigned to one of this tag's subta
 COM_TAGS_INCLUDE="Include"
 COM_TAGS_INCLUDE_CHILDREN_DESC="Include or exclude child tags from the result list for a tag"
 COM_TAGS_INCLUDE_CHILDREN_LABEL="Child Tags"
-COM_TAGS_ITEM_ASSOCIATIONS_FIELDSET_DESC="Multilanguage only! This choice will only display if the Language Filter parameter 'Item Associations' is set to 'Yes'. Choose a category item for the target language. This association will let the Language Switcher module redirect to the associated category item in another language. If used, make sure to display the Language switcher module on the concerned pages. A category item set to language 'All' can't be associated."
-COM_TAGS_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Tag Item Associations"
-COM_TAGS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- No association -"
 COM_TAGS_ITEM_OPTIONS="Item Options"
 COM_TAGS_ITEMS_SEARCH_FILTER="Search"
 COM_TAGS_LEFT="Left"
@@ -168,8 +164,6 @@ COM_TAGS_TAGGED_ITEMS_DATE="Date"
 COM_TAGS_TAGGED_ITEMS_ID="ID"
 COM_TAGS_TAGGED_ITEMS_LANGUAGE="Language"
 COM_TAGS_TAGGED_ITEMS_TITLE="Title"
-COM_TAGS_TIP_ASSOCIATED_LANGUAGE="%s %s"
-COM_TAGS_TIP_ASSOCIATION="Associated tag items"
 COM_TAGS_XML_DESCRIPTION="This component manages tags"
 JGLOBAL_NO_ITEM_SELECTED="No tags selected"
 JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_STATE="Cannot change the published state when the parent tag is of a lesser state."
